# Solaris

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.rocm  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
assets/: README.md
examples/: README.md  demo_conformal.py  demo_coupled.py  demo_residual_correction.py  train_constrained_darcy.py  train_fno_darcy.py  train_multiscale_fno.py  train_pinn_poisson.py
physicsnemo/core/: __init__.py  module.py  registry.py
physicsnemo/datapipes/: __init__.py
physicsnemo/distributed/: __init__.py  manager.py
physicsnemo/metrics/: __init__.py  metrics.py
physicsnemo/models/: __init__.py  afno.py  conformal.py  constrained_fno.py  coupled.py  fno.py  meshgraphnet.py  mlp.py  multiscale_fno.py  residual_corrector.py
physicsnemo/nn/: __init__.py  activations.py
physicsnemo/utils/: __init__.py  checkpoint.py  logging.py
projects/: README.md
projects/chip_thermal/: .gitignore  README.md  benchmark.py  calibrate.py  compare.py  compare_dp.py  dp_policy.py  solver.py  train.py  visualize.py
projects/hurricane_flood/: README.md  compare.py  solver.py  train.py  visualize.py
projects/navier_stokes/: compare.py  solver.py  train.py
projects/water_heat_diffusion/: compare.py  solver.py  train.py
projects/wave_equation/: compare.py  solver.py  train.py
projects/weather_forecast/: compare.py  data_gen.py  train.py
solaris/: README.md  __init__.py  exceptions.py
solaris/core/: __init__.py  meta.py  module.py  registry.py
solaris/datapipes/: __init__.py  dataset.py  transforms.py
solaris/distributed/: __init__.py  fft.py  manager.py  mappings.py
solaris/metrics/: __init__.py
solaris/models/: __init__.py  afno.py  conformal.py  constrained_fno.py  coupled.py  deeponet.py  fno.py  meshgraphnet.py  mlp.py  multiscale_fno.py  residual_corrector.py  uno.py  (+1 more)
tests/: README.md  test_constraints.py  test_core.py  test_datapipes.py  test_distributed.py  test_distributed_fft.py  test_distributed_mappings.py  test_integration.py  test_metrics.py  test_models.py  test_profiling.py  test_registry.py  test_training_utils.py  test_tuner.py
(+14 files in other folders)
