[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solaris-rocm"
version = "0.1.0"
description = "Physics AI framework for AMD GPUs via ROCm — Solaris"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.24.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "fsspec>=2023.1.0",
    "tensordict>=0.5.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
gnns = [
    "torch-geometric>=2.4.0",
    "torch-scatter",
    "torch-cluster",
]
datapipes = [
    "h5py>=3.8.0",
    "zarr>=2.14.0",
    "netCDF4>=1.6.0",
    "dask>=2023.1.0",
]
viz = [
    "matplotlib>=3.7.0",
    "pyvista>=0.40.0",
    "vtk>=9.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.3.0",
]

[project.entry-points."solaris.models"]
fno = "solaris.models.fno:FNO"
afno = "solaris.models.afno:AFNO"
mlp = "solaris.models.mlp:FullyConnected"
meshgraphnet = "solaris.models.meshgraphnet:MeshGraphNet"
wno = "solaris.models.wno:WNO"
uno = "solaris.models.uno:UNO"
deeponet = "solaris.models.deeponet:DeepONet"
constrained_fno = "solaris.models.constrained_fno:ConstrainedFNO"
multiscale_fno = "solaris.models.multiscale_fno:MultiScaleFNO"
coupled_operator = "solaris.models.coupled:CoupledOperator"
conformal = "solaris.models.conformal:ConformalNeuralOperator"
residual_corrector = "solaris.models.residual_corrector:NeuralResidualCorrector"

[tool.hatch.build.targets.wheel]
packages = ["solaris"]

[tool.hatch.build.targets.sdist]
include = ["solaris", "tests", "examples"]

[[tool.uv.index]]
name = "rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.uv.sources]
torch = [{ index = "rocm" }]
torchvision = [{ index = "rocm" }]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=solaris --cov-report=term-missing"
